# TinyHTTP

./: Cargo.toml  Config.toml  LICENSE  README.md
docs/: proposal.tex
examples/: main.rs
http/: index.html
http/demos/: test.html
src/: configuration.rs  connection.rs  lib.rs  main.rs  protocol.rs  request.rs  response.rs
