[package]
name = "tiny_http"
version = "0.1.0"
authors = ["Greg Hairfield <hairfiel@pdx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
lazy_static = "1.3"
chrono = "0.4.19"

